Update llm crawl accesibility

--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Veeville.</title>
+    <title>Veeville - Global Integrated Marketing Company</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="utf-8" />
-    <meta content="width=device-width, initial-scale=1" name="viewport" />
+    <meta
+      name="description"
+      content="Veeville is a global integrated marketing company offering brand strategy, creative development, campaign planning, digital marketing, and custom technology design across multiple sectors."
+    />
+    <meta
+      name="keywords"
+      content="integrated marketing, brand strategy, creative development, digital marketing, technology design"
+    />
+    <meta name="author" content="Veeville" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+
+    <!-- Fonts -->
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
       @import url("https://fonts.googleapis.com/css?family=Inter:700,400");
@@ -15,7 +29,6 @@
           format("opentype");
       }
     </style>
-    <link href="tailwind.css" rel="stylesheet" />
     <link href="tailwind.css" rel="stylesheet" />
   </head>
   <body>
